- fix: https://github.com/padreati/rapaio/issues/256 - fix: https://github.com/padreati/rapaio/issues/255